# song-downloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  docker-compose.yml
.github/workflows/: docker.yml
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  metadata.py  models.py  queue.py  secrets_store.py
backend/app/routes/: auth.py  downloads.py  files.py  settings.py
backend/app/sources/: __init__.py  base.py  soundcloud.py  spotify.py
backend/tests/: test_files.py  test_sources.py  test_youtube_match.py
design_handoff_music_dl_ui/: Music-dl.dc.html  README.md
docker/: entrypoint.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  theme.ts  types.ts
frontend/src/components/: AuthScreen.tsx  CompletedSection.tsx  FileBrowser.tsx  JobRow.tsx  SoundCloudConnect.tsx  SpotifyConnect.tsx  UrlForm.tsx
install/: README.md  Start music-dl (Windows).bat  Start music-dl (macOS).command  Stop music-dl (Windows).bat  Stop music-dl (macOS).command  Update music-dl (Windows).bat  Update music-dl (macOS).command
