[project]
name = "music-dl"
version = "0.1.0"
description = "Self-hosted music downloader (SoundCloud + Spotify) with full metadata + cover art."
requires-python = ">=3.12"
dependencies = [
    # spotdl pins a narrow FastAPI range, so fastapi/uvicorn/pydantic are left
    # unpinned here to let spotdl's resolver choose compatible versions.
    "spotdl>=4.2.0",
    "yt-dlp>=2024.0.0",
    "mutagen>=1.47",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
